# LTL-Checker

./: .clang-format  CMakeLists.txt  README.md  main.cpp  test.sh
benchmark/: 2.ans
grammar/: LTL.g4  LTL.interp  LTLBaseListener.cpp  LTLBaseListener.h  LTLBaseVisitor.cpp  LTLBaseVisitor.h  LTLLexer.cpp  LTLLexer.h  LTLLexer.interp  LTLLexer.tokens  LTLListener.cpp  LTLListener.h  LTLParser.cpp  LTLParser.h  LTLVisitor.cpp  LTLVisitor.h
include/: gnba.h  ltl_to_gnba_builder.h  persistence_checker.h  product.h  product_ts_constructor.h  ts.h
include/ast/: ast.h  ast_builder.h  ast_node.h
src/: ltl_to_gnba_builder.cpp  persistence_checker.cpp  product_ts_constructor.cpp  ts.cpp
src/ast/: ast.cpp  ast_builder.cpp  ast_node.cpp
testcases/: TS.txt  benchmark.txt  benchmark1.txt
testcases/benchmark/: 3.ts.in
